examples/test/testpolicy15440.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15440
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key45: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value37
          key48: value7
          key19: value32
      podSelector:
        matchLabels:
          key32: value38
